# ratatui-mana

./: Cargo.toml  license.md  readme.md
examples/todo-app/: Cargo.toml  README.md
examples/todo-app/src/: main.rs
housecat-macros/: Cargo.toml
housecat-macros/src/: lib.rs
mana-tui-beheaded/src/: focus.rs
mana-tui-elemental/: Cargo.toml
mana-tui-elemental/src/: layout.rs  lib.rs  prelude.rs  ui.rs
mana-tui-macros/: Cargo.toml
mana-tui-macros/src/: lib.rs  manasx.rs  subview.rs
mana-tui-macros/tests/: ui.rs
mana-tui-potion/: Cargo.toml
mana-tui-potion/examples/: counter.rs
mana-tui-potion/src/: backends.rs  focus.rs  lib.rs
mana-tui-potion/src/focus/: focus.rs  handlers.rs
mana-tui-utils/src/: ext.rs  lib.rs  resource.rs  systems.rs
mx/: Cargo.toml
mx/mx-cli/: Cargo.toml  LICENSE
mx/mx-cli/src/: args.rs  ipc.rs  main.rs  tui.rs
mx/mx-core/: Cargo.toml
mx/mx-core/src/: args.rs  lib.rs  logging.rs
mx/src/: logging.rs  main.rs
ratatui-elemental/: Cargo.toml
ratatui-elemental/src/: layout.rs  lib.rs  typemap.rs
src/: lib.rs
