[package]
name = "mana-tui"
version = "0.0.1"
edition = "2024"
license = "GPL-3.0"

[workspace]
resolver = "3"
members = ["mana-tui-elemental"]

[workspace.lints.clippy]
pedantic = "warn"
missing-docs = { level = "deny", priority = 1 }

[workspace.dependencies]
bon = "3.8.1"
ratatui = "0.30.0"
smol = "2.0.2"
derive_more = { version = "2.1.0", features = ["full"] }
crossterm = { version = "0.29.0", features = ["event-stream"] }
tracing = "0.1.44"

[dependencies]
bon.workspace = true
ratatui.workspace = true
smol.workspace = true
derive_more.workspace = true
crossterm.workspace = true
tailcall = "1.0.1"
im = "15.1.0"
