[package]
name = "mana-tui"
version = "0.0.1"
edition = "2024"
license = "GPL-3.0"

[features]
macros = ["dep:bon"]

[workspace]
resolver = "3"
members = ["mana-tui-elemental", "mana-tui-macros"]

[dependencies]
mana-tui-elemental.workspace = true
bon = { workspace = true, optional = true }

[workspace.lints.clippy]
pedantic = "warn"

[workspace.dependencies]
mana-tui-elemental.path = "./mana-tui-elemental"
mana-tui-macros.path = "./mana-tui-macros"
bon = "3.8.1"
ratatui = "0.30.0"
derive_more = { version = "2.1.0", features = ["full"] }
crossterm = { version = "0.29.0", features = ["event-stream"] }
tracing = "0.1.44"
hecs = { version = "0.10.5", features = ["macros"] }

[dev-dependencies]
bon = "3.8.1"
ratatui.workspace = true
mana-tui-macros.workspace = true
mana-tui-elemental.workspace = true
hecs.workspace = true
