[package]
edition = "2024"
name = "mana-tui"
version = "0.0.1"
license = "MIT"

[features]
macros = [
    "dep:bon",
    "dep:mana-tui-macros",
]
nightly = ["mana-tui-elemental/nightly"]

[dependencies]
mx-core.workspace = true

[dependencies.bon]
workspace = true
optional = true

[dependencies.mana-tui-elemental]
workspace = true

[dependencies.mana-tui-macros]
workspace = true
optional = true

[dependencies.ratatui]
workspace = true

[dev-dependencies]
bon = "3.8.1"

[dev-dependencies.hecs]
workspace = true

[dev-dependencies.mana-tui-elemental]
workspace = true

[dev-dependencies.mana-tui-macros]
workspace = true

[dev-dependencies.ratatui]
workspace = true

[workspace]
members = [
    "mana-tui-elemental",
    "mana-tui-macros",
    "mx/mx-core",
    "mx/mx-cli",
    "examples/todo-app",
]
resolver = "3"

[workspace.dependencies]
ratatui = { git = "https://github.com/wyvernbw/ratatui.git", branch = "wyvernbw/fix-resize-for-inline-viewport-2086", version = "0.30.0", features = ["scrolling-regions"] }
tracing = "0.1.44"
bon = "3.8.1"
tracing-subscriber = "0.3.22"

[workspace.dependencies.derive_more]
version = "2.1.0"
features = ["full"]

[workspace.dependencies.hecs]
version = "0.11.0"
git = "https://github.com/Ralith/hecs.git"
features = ["macros"]

[workspace.dependencies.mana-tui-elemental]
path = "./mana-tui-elemental"

[workspace.dependencies.mana-tui-macros]
path = "./mana-tui-macros"

[workspace.dependencies.mx-core]
path = "./mx/mx-core"

[workspace.lints.clippy]
pedantic = "warn"


[patch.crates-io]
ratatui = { git = "https://github.com/wyvernbw/ratatui.git", branch = "wyvernbw/fix-resize-for-inline-viewport-2086", version = "0.30.0" }
ratatui-core = { git = "https://github.com/wyvernbw/ratatui.git", branch = "wyvernbw/fix-resize-for-inline-viewport-2086", version = "0.1.0" }

# Read the optimization guideline for more details: https://ratatui.rs/recipes/apps/release-your-app/#optimizations
[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = false
