[package]
name = "mana-tui-elemental"
version = "0.0.1"
edition = "2024"
license = "MIT"

[features]
nightly = []

[dependencies]
ratatui.workspace = true
bon = { workspace = true, features = ["experimental-overwritable"] }
derive_more.workspace = true
tracing.workspace = true
hecs.workspace = true
glam = "0.30.9"
strum = { version = "0.27.2", features = ["derive"] }

[dev-dependencies]
mana-tui = { path = "..", features = ["nightly", "macros"] }
mana-tui-macros.workspace = true 
tracing-subscriber = "0.3.22"
color-eyre = "*"
