[package]
name = "mana-tui-macros"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.105"
syn = { version = "2.0.114", features = ["full", "extra-traits"] }
quote = "1.0.43"

[dev-dependencies]
mana-tui-elemental.workspace = true

[lints]
workspace = true
