[package]
name = "mana-tui-potion"
version = "0.1.0"
edition = "2024"

[dependencies]
mana-tui-elemental.workspace = true
ratatui.workspace = true
bon = { workspace = true, features = ["experimental-overwritable"] }
derive_more.workspace = true
tracing.workspace = true
hecs.workspace = true
crossterm = { version = "0.29.0", default-features = false, features = ["event-stream"] }
flume = { version = "0.12.0", default-features = false, features = ["async"] }
tokio = { version = "1.49.0", default-features = false, features = ["macros", "rt", "time"] }
tokio-stream = { version = "0.1.18", default-features = false }
mana-tui-utils = { version = "0.1.0", path = "../mana-tui-utils" }
tailcall = "1.0.1"
smallbox = { version = "0.8.8", features = ["nightly"] }
thiserror = "2.0.18"

[dev-dependencies]
mana-tui-macros.workspace = true 
mana-tui.path = ".."
tracing-subscriber = "0.3.22"
anyhow = "*"

[lints]
workspace = true
