[package]
name = "ratatui-elemental"
version = "0.1.0"
edition = "2024"

[dependencies]
bon = { workspace = true, features = ["experimental-overwritable"] }
ratatui.workspace = true
flume.workspace = true
smol.workspace = true
slab.workspace = true
smallbox.workspace = true
smallvec.workspace = true
derive_more.workspace = true
crossterm.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
glam = "0.30.9"
bytemuck = "1.24.0"
heapless = { version = "0.9.2", features = ["nightly"] }
slotmap = "1.1.1"
thiserror = "2.0.17"
