[package]
name = "todo-app"
version = "0.1.0"
description = "mana-tui-elemental example of a todo app"
authors = ["wyvernbw <iamwyvern511@gmail.com>"]
license = "MIT"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
crossterm = "0.29.0"
mana-tui = { version = "0.0.1", path = "../..", features = ["macros"] }
ratatui.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
