[package]
name = "mx-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui.workspace = true 
serde = { version = "1.0.228", features = ["rc"] }
tracing.workspace = true
tracing-serde = "0.2.0"
tracing-subscriber = { workspace = true, features = ["env-filter", "serde"] }
color-eyre = "0.6.5"
tachyonfx = "0.22.0"
mx-core.workspace = true
portable-pty = "0.9.0"
tui-term = "0.3.0"
terminput = "0.5.12"
terminput-crossterm = "0.4.8"

[dependencies.flume]
version = "0.12.0"
default-features = false
