[package]
name = "mx-core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
ratatui.workspace = true 
serde = { version = "1.0.228", features = ["rc"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter", "serde"] }
flume = { version = "0.12.0", default-features = false }


[dependencies.dlhn]
git = "https://github.com/otake84/dlhn.git"
branch = "fix/deserialize-string"
version = "0.1.6"
default-features = false

